--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "behat/mink-extension",
+    "name": "nmariani/mink-extension",
     "type": "behat-extension",
     "description": "Mink extension for Behat",
     "keywords": ["web", "test", "browser", "gui"],
@@ -17,7 +17,7 @@
     "require": {
         "php":          ">=5.3.2",
         "behat/behat":  ">=2.4.0,<2.5.0",
-        "behat/mink":   ">=1.4.0,<1.5.0"
+        "nmariani/mink":   ">=1.4.0,<1.5.0"
     },
 
     "require-dev": {
