--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 
     "require": {
         "php":          ">=5.3.2",
-        "behat/behat":  ">=2.4.0,<2.5.0",
+        "nmariani/behat":  ">=2.4.0,<2.5.0",
         "nmariani/mink":   ">=1.4.0,<1.5.0"
     },
 
