--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
 
     "require": {
         "php":          ">=5.3.2",
-        "nmariani/behat":  ">=2.4.0,<2.5.0",
-        "nmariani/mink":   ">=1.4.0,<1.5.0"
+        "nmariani/behat":  ">=2.4.0",
+        "nmariani/mink":   ">=1.4.0"
     },
 
     "require-dev": {
